project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-backend
  template:
    metadata:
      labels:
        app: project-backend
    spec:
      volumes:
        - name: image-cache
          emptyDir: {}
      containers:
        - name: project-backend
          image: okisma/project-backend:2.10
          volumeMounts:
          - name: image-cache
            mountPath: /usr/src/app/public
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-frontend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-frontend
  template:
    metadata:
      labels:
        app: project-frontend
    spec:
      containers:
        - name: project-frontend
          image: okisma/project-frontend:2.08
